--- a/app/src/main/res/layout/fragment_chelseafc.xml
+++ b/app/src/main/res/layout/fragment_chelseafc.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:fab="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -12,10 +13,28 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
+    <com.melnykov.fab.FloatingActionButton
+        android:id="@+id/teamOneFloatingButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:src="@drawable/ic_action_content_new"
+        fab:fab_colorNormal="@color/primary"
+        fab:fab_colorPressed="@color/accent_pressed"
+        fab:fab_colorRipple="@color/ripple"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="20dp"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@android:id/empty"
-        android:text="No posts to display"/>
+        android:text="No posts to display"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
