--- a/app/src/main/res/layout/activity_post_message_comments.xml
+++ b/app/src/main/res/layout/activity_post_message_comments.xml
@@ -5,12 +5,15 @@
                 android:layout_height="match_parent"
                 tools:context="com.paveynganpi.ballonor.ui.PostMessageCommentsActivity">
 
+    <include layout="@layout/app_bar"
+             android:id="@+id/comments_app_bar"/>
+
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/PostMessageCommentsRecyclerView"
         android:scrollbars="vertical"
-        android:paddingTop="30dp"/>
+        android:layout_below="@id/comments_app_bar"/>
 
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/PostMessageCommentsFloatingButton"
