--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -1,9 +1,10 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-                android:id="@+id/fragment_navigation_drawer"
-             android:layout_height="match_parent"
-             tools:context="com.paveynganpi.ballonor.ui.NavigationDrawerFragment">
+<RelativeLayout android:id="@+id/fragment_navigation_drawer"
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#EEE"
+                tools:context="com.paveynganpi.ballonor.ui.NavigationDrawerFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
