--- a/app/src/main/res/layout/posts_item.xml
+++ b/app/src/main/res/layout/posts_item.xml
@@ -93,7 +93,7 @@
         android:layout_alignTop="@+id/postMessageCommentLabel"
         android:layout_toRightOf="@+id/postMessageCommentLabel"
         android:layout_marginLeft="5dp"
-        android:textColor="@color/primary"
+        android:textColor="@color/colorPrimary"
 
         android:layout_toEndOf="@+id/postMessageCommentLabel"/>
 
@@ -101,7 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/postMessagelikesCounter"
-        android:textColor="@color/primary"
+        android:textColor="@color/colorPrimary"
         android:layout_alignTop="@+id/postMessageLikeLabel"
         android:layout_toRightOf="@id/postMessageLikeLabel"
         android:layout_marginLeft="5dp"
