--- a/app/src/main/res/layout/fragment_realmadridfc.xml
+++ b/app/src/main/res/layout/fragment_realmadridfc.xml
@@ -11,6 +11,14 @@
         android:id="@+id/PostMessageRecyclerView"
         android:scrollbars="vertical"/>
 
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:visibility="gone"
+        android:text="No Posts yet.Please write a post" />
+
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/teamTwoFloatingButton"
         android:layout_width="wrap_content"
