--- a/app/src/main/res/layout/activity_post_message_comments.xml
+++ b/app/src/main/res/layout/activity_post_message_comments.xml
@@ -1,39 +1,49 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
                 xmlns:fab="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context="com.paveynganpi.ballonor.ui.PostMessageCommentsActivity">
 
-    <include layout="@layout/app_bar"
-             android:id="@+id/comments_app_bar"/>
+    <include
+        android:id="@+id/comments_app_bar"
+        layout="@layout/app_bar"/>
 
-    <android.support.v7.widget.RecyclerView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/PostMessageCommentsRecyclerView"
-        android:scrollbars="vertical"
-        android:layout_below="@id/comments_app_bar"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        >
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/PostMessageCommentsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/comments_app_bar"
+            android:scrollbars="vertical"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <com.melnykov.fab.FloatingActionButton
         android:id="@+id/PostMessageCommentsFloatingButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:src="@drawable/ic_action_content_new"
-
-        android:layout_alignParentEnd="false"
         android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="false"
+
         android:layout_alignParentRight="true"
+        android:layout_gravity="bottom|right"
+        android:layout_marginBottom="20dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="20dp"/>
+        android:src="@drawable/ic_action_content_new"/>
 
     <TextView
         android:id="@+id/empty_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:visibility="gone"
-        android:text="No Comments, Write a comment..." />
+        android:text="No Comments, Write a comment..."
+        android:visibility="gone"/>
 
 </RelativeLayout>
