user can now select favorite teams

--- a/app/src/main/res/layout/activity_league_teams.xml
+++ b/app/src/main/res/layout/activity_league_teams.xml
@@ -8,10 +8,12 @@
         android:id="@+id/app_bar"
         layout="@layout/app_bar"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/leagueTeamsRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/app_bar"/>
-
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/leagueTeamsListView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:choiceMode="multipleChoice"
+        android:layout_below="@+id/app_bar"/>
 </RelativeLayout>
