--- a/app/src/main/res/layout/activity_leagues.xml
+++ b/app/src/main/res/layout/activity_leagues.xml
@@ -2,15 +2,15 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context="com.paveynganpi.ballonor.ui.LeaguesActivity">
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_bar"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/leaguesRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/app_bar"/>
 
 </RelativeLayout>
