--- a/app/src/main/res/layout/league_teams_item.xml
+++ b/app/src/main/res/layout/league_teams_item.xml
@@ -5,6 +5,7 @@
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
                 android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:descendantFocusability="blocksDescendants"
                 android:paddingRight="@dimen/activity_horizontal_margin">
 
     <ImageView
@@ -27,4 +28,13 @@
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:layout_centerVertical="true"/>
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/leagueTeamsCheckbox"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"/>
 </RelativeLayout>
