--- a/app/src/main/res/layout/leagues_item.xml
+++ b/app/src/main/res/layout/leagues_item.xml
@@ -3,7 +3,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:paddingTop="8dp"
-                android:paddingBottom="8dp">
+                android:paddingBottom="8dp"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin">
 
     <ImageView
         android:layout_width="wrap_content"
