--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,4 +6,10 @@
             android:title="@string/menu_logout_lable"
             android:orderInCategory="100"
             app:showAsAction="never"/>
+      <item
+          android:id="@+id/action_profile"
+          android:title="profile"
+          android:icon="@drawable/ic_user_profile"
+          app:showAsAction="always"
+          />
 </menu>
