--- a/app/src/main/res/layout/fragment_user_favourite_posts.xml
+++ b/app/src/main/res/layout/fragment_user_favourite_posts.xml
@@ -3,4 +3,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+    <!--<android.support.v4.widget.SwipeRefreshLayout-->
+        <!--android:id="@+id/favouritePostsSwipeRefreshLayout"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentStart="true"-->
+        <!-->-->
+
+        <!--<android.support.v7.widget.RecyclerView-->
+            <!--android:id="@+id/favouritePostsRecyclerView"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:scrollbars="vertical"/>-->
+
+    <!--</android.support.v4.widget.SwipeRefreshLayout>-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/empty_view"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:gravity="center"-->
+        <!--android:text="You have liked no posts yet"-->
+        <!--android:visibility="gone"/>-->
+
 </RelativeLayout>
