--- a/app/src/main/res/layout/notifications_item.xml
+++ b/app/src/main/res/layout/notifications_item.xml
@@ -5,8 +5,7 @@
                 android:layout_height="match_parent"
                 android:background="@android:color/white"
                 android:orientation="vertical"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp">
+                android:paddingBottom="8dp">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -14,7 +13,7 @@
         android:id="@+id/notificationsProfileImageView"
         tools:src="@drawable/ic_action_content_new"
         android:layout_marginLeft="12dp"
-        android:layout_marginTop="3dp"
+        android:paddingTop="12dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
@@ -30,7 +29,8 @@
         android:layout_alignTop="@+id/notificationsProfileImageView"
         android:layout_toRightOf="@+id/notificationsProfileImageView"
         android:layout_toEndOf="@+id/notificationsProfileImageView"
-        android:layout_marginLeft="4dp"/>
+        android:layout_marginLeft="8dp"
+        android:paddingTop="8dp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -38,8 +38,20 @@
         android:text="9hrs"
         android:id="@+id/notificationsTimeLabel"
         android:layout_below="@+id/notificationsDescriptionLable"
+        android:layout_toRightOf="@+id/notificationIconImageView"
+        android:layout_toEndOf="@+id/notificationIconImageView"
+        android:layout_marginLeft="4dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="5dp"
+        android:textColor="#9E9E9E"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/notificationIconImageView"
+        tools:src="@drawable/ic_comment"
         android:layout_alignLeft="@+id/notificationsDescriptionLable"
         android:layout_alignStart="@+id/notificationsDescriptionLable"
-        />
+        android:layout_below="@+id/notificationsDescriptionLable"/>
 
 </RelativeLayout>
