--- a/app/src/main/res/layout/posts_item.xml
+++ b/app/src/main/res/layout/posts_item.xml
@@ -84,7 +84,8 @@
         android:layout_marginRight="3dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="false"/>
+        android:layout_alignParentTop="false"
+        android:textColor="#9E9E9E"/>
 
     <TextView
         android:layout_width="wrap_content"
