--- a/app/src/main/res/layout/notifications_item.xml
+++ b/app/src/main/res/layout/notifications_item.xml
@@ -40,9 +40,9 @@
         android:layout_below="@+id/notificationsDescriptionLable"
         android:layout_toRightOf="@+id/notificationIconImageView"
         android:layout_toEndOf="@+id/notificationIconImageView"
-        android:layout_marginLeft="4dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="5dp"
+        android:paddingLeft="4dp"
+        android:paddingStart="4dp"
+        android:paddingTop="5dp"
         android:textColor="#9E9E9E"/>
 
     <ImageView
