fixed some ide errors

--- a/app/src/main/res/layout/posts_item.xml
+++ b/app/src/main/res/layout/posts_item.xml
@@ -12,8 +12,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/allPostsProfileImageView"
-        android:src="@drawable/ic_action_content_new"
+        tools:src="@drawable/ic_action_content_new"
+        android:contentDescription="@string/post_creator_profile_image_description"
         android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="3dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
