--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -99,7 +99,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Followers"
+        android:text="Followers"
         android:layout_toRightOf="@id/followersCount"
         android:layout_toEndOf="@+id/followersCount"
         android:layout_below="@id/userProfileScreenName"
@@ -122,7 +122,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Following"
+        android:text="Following"
         android:layout_toRightOf="@id/followingCount"
         android:layout_toEndOf="@+id/followingCount"
         android:layout_below="@id/userProfileScreenName"
