--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -18,19 +18,20 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="49dp"
         android:hint="What&apos;s happening?"
-        android:maxLength="140"/>
+        android:maxLength="140"
+        android:autoText="true"/>
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Post"
         android:id="@+id/createPostButton"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/createPostTextField"
-        android:layout_alignEnd="@+id/createPostTextField"
-        android:layout_marginBottom="35dp"
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="0"
-        android:background="#2196F3"/>
+        android:background="#2196F3"
+        android:layout_marginTop="31dp"
+        android:layout_below="@+id/createPostTextField"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 </RelativeLayout>
