--- a/app/src/main/res/layout/activity_post_message_comments.xml
+++ b/app/src/main/res/layout/activity_post_message_comments.xml
@@ -31,7 +31,10 @@
         android:layout_gravity="bottom|right"
         android:layout_marginBottom="20dp"
         android:layout_marginRight="16dp"
-        android:src="@drawable/ic_action_content_new"/>
+        android:src="@drawable/ic_action_content_new"
+        fab:fab_colorNormal="@color/colorAccent"
+        fab:fab_colorPressed="@color/colorAccent"
+        fab:fab_colorRipple="@color/colorAccent"/>
 
     <TextView
         android:id="@+id/empty_view"
