--- a/app/src/main/res/layout/league_teams_item.xml
+++ b/app/src/main/res/layout/league_teams_item.xml
@@ -29,6 +29,7 @@
         android:layout_toEndOf="@+id/leagueTeamsImageView"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
         android:layout_centerVertical="true"/>
 
     <CheckBox
