--- a/app/src/main/res/layout/leagues_item.xml
+++ b/app/src/main/res/layout/leagues_item.xml
@@ -28,6 +28,7 @@
         android:layout_toEndOf="@+id/leaguesImageView"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
         android:layout_centerVertical="true"/>
 
 </RelativeLayout>
