--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -25,13 +25,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Post"
+        android:textColor="@color/androidWhite"
         android:id="@+id/createPostButton"
         android:shadowDx="0"
         android:shadowDy="0"
         android:shadowRadius="0"
-        android:background="#2196F3"
+        android:background="@color/colorPrimary"
         android:layout_marginTop="31dp"
         android:layout_below="@+id/createPostTextField"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="140"
+        android:id="@+id/createPostCounterTextView"
+        android:layout_below="@+id/createPostTextField"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textColor="@color/colorAccent"
+        android:layout_marginLeft="3.5dp"
+        android:layout_marginStart="3.5dp"/>
 </RelativeLayout>
